# life-simulator-rebirth

./: CMakeLists.txt  readme.md
headers/: data.h  items.h  openingScene.h  player.h  utils.h
src/: items.cpp  main.cpp  openingScene.cpp  player.cpp  utils.cpp
